fixed requested by Nelson done